syntax = "proto3";

package program_service;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "org.icgc.argo.program_service";
option java_outer_classname = "ProgramServiceProto";
option objc_class_prefix = "PSP";

service ProgramService {
  rpc CreateProgram(CreateProgramRequest) returns (CreateProgramResponse);
  rpc RemoveProgram(RemoveProgramRequest) returns (google.protobuf.Empty);
  rpc UpdateProgram(UpdateProgramRequest) returns (UpdateProgramResponse);
  rpc ListPrograms(google.protobuf.Empty) returns (ListProgramsResponse);
  rpc GetProgram(GetProgramRequest) returns (GetProgramResponse);

  rpc InviteUser(InviteUserRequest) returns (InviteUserResponse);
  rpc JoinProgram(JoinProgramRequest) returns (google.protobuf.Empty);

  rpc RemoveUser(RemoveUserRequest) returns (google.protobuf.Empty);
  rpc ListUser(ListUserRequest) returns (ListUserResponse);
}

message Program {
  google.protobuf.StringValue short_name = 1;
  google.protobuf.StringValue description = 2;
  google.protobuf.StringValue name = 3;
  MembershipTypeValue membership_type = 4;
  google.protobuf.Int32Value commitment_donors = 5;
  google.protobuf.Int32Value submitted_donors = 6;
  google.protobuf.Int32Value genomic_donors = 7;
  google.protobuf.StringValue website = 8;
  google.protobuf.StringValue institutions = 9;
  google.protobuf.StringValue countries = 10;
  google.protobuf.StringValue regions = 11;

  repeated Cancer cancer_types = 12;
  repeated PrimarySite primary_sites = 13;

  google.protobuf.Timestamp created_at = 14;
  google.protobuf.Timestamp updated_at = 15;
}

enum MembershipType {
  FULL = 0;
  ASSOCIATE = 1;
}

message MembershipTypeValue {
  MembershipType value = 1;
}

enum UserRole {
  COLLABORATOR = 0;
  ADMIN = 1;
  CURATOR = 2;
  SUBMITTER = 3;
  BANNED = 4;
}

message UserRoleValue {
  UserRole value = 1;
}

message Cancer {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue name = 2;
}

message PrimarySite {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue name = 2;
}

message User {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue email = 2;
  google.protobuf.StringValue first_name = 3;
  google.protobuf.StringValue last_name = 4;
}

message CreateProgramRequest {
  Program program = 1;
}

message CreateProgramResponse {
  google.protobuf.StringValue id = 1;
  google.protobuf.Timestamp created_at = 2;
}

message UpdateProgramRequest {
  google.protobuf.StringValue id = 1;
  Program program = 2;
}
message UpdateProgramResponse {
  google.protobuf.Timestamp updated_at = 1;
}

message GetProgramRequest {
  google.protobuf.StringValue id = 1;
}

message GetProgramResponse {
  Program program = 1;
}

message ListProgramsResponse {
  repeated Program programs = 1;
}

message RemoveUserRequest {
  google.protobuf.StringValue user_id = 1;
  google.protobuf.StringValue program_id = 2;
}

message ListUserRequest {
  google.protobuf.StringValue program_id = 1;
}

message ListUserResponse {
  repeated User users = 1;
}

message InviteUserRequest {
  google.protobuf.StringValue program_id = 1;
  google.protobuf.StringValue first_name = 2;
  google.protobuf.StringValue last_name = 3;
  google.protobuf.StringValue email = 4;

  // Role of the user
  UserRoleValue role = 5;
}

message InviteUserResponse {
  // The invite id of the invitation which is
  // sent to the user by email
  google.protobuf.StringValue invite_id = 1;
}

message JoinProgramRequest {
  // The invitation id which is received by the user from email
  google.protobuf.StringValue join_program_invitation_id = 1;

  // The institute where the user belong
  google.protobuf.StringValue institute = 2;

  // First name of the affiliate principal investigator
  google.protobuf.StringValue affiliate_pi_first_name = 3;

  // last name name of the affiliate principal investigator
  google.protobuf.StringValue affiliate_pi_last_name = 4;

  // The department of the user
  google.protobuf.StringValue department = 5;
}

message RemoveProgramRequest {
  google.protobuf.StringValue program_id = 2;
}
